force-app/main/default/objects/Program_Task__c/Program_Task__c.object-meta.xml
<CustomObject>
    <description>Relationship between programs and tasks objects.</description>
    <label>Program Task</label>
    <nameField>
        <displayFormat>PT-{0000}</displayFormat>
        <label>Program Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>