force-app/main/default/objects/Program_Task__c/fields/Due_Day__c.field-meta.xml
<CustomField>
    <fullName>Due_Day__c</fullName>
    <inlineHelpText>What day in this program is the task due?</inlineHelpText>
    <label>Due Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>