force-app/main/default/objects/Program_Task__c/fields/Duration_Mins__c.field-meta.xml
<CustomField>
    <fullName>Duration_Mins__c</fullName>
    <label>Duration Mins.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>