force-app/main/default/objects/Program_Task__c/fields/Training_Task__c.field-meta.xml
<CustomField>
    <fullName>Training_Task__c</fullName>
    <label>Training Task</label>
    <referenceTo>Training_Task__c</referenceTo>
    <relationshipLabel>Program Tasks</relationshipLabel>
    <relationshipName>Program_Tasks</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>