force-app/main/default/objects/Program_Task__c/validationRules/Invalid_Due_Day.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_Due_Day</fullName>
    <active>true</active>
    <errorConditionFormula>Due_Day__c &lt; 1</errorConditionFormula>
    <errorDisplayField>Due_Day__c</errorDisplayField>
    <errorMessage>Please enter a Due Day value greater than or equal to 1</errorMessage>
</ValidationRule>